# site

./: .gitignore  Cargo.toml  README.md  Trunk.toml  app-4776e3a27081f131_bg.wasm  app-924ac26d504a2429.js  app-a5f9088041f7d98b_bg.wasm  app-dd964952ac4e06b1.js  app-dd964952ac4e06b1_bg.wasm  app-fe597b51e9d6dd2e.js  index.html  tailwind.config.js
app/: Cargo.toml  index.html
app/assets/css/: styles.css
app/assets/stylesheets/: tailwind.css
app/src/: lib.rs  router.rs
app/src/components/: buttons.rs  cards.rs  mod.rs  nav.rs  sections.rs
app/src/pages/: about.rs  home.rs  mod.rs  page_not_found.rs  privacy.rs  terms.rs
css/: styles.css
