[package]
name = "app"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-hooks = { workspace = true }
subxt = { workspace = true }
plot_icon = { workspace = true }